feature: Focus openlayers view on selected section in dropdown
TODO: Repopulate parent/children section lists on selecting a section

--- a/tools/webpack/webgis/maps/util/service.scss
+++ b/tools/webpack/webgis/maps/util/service.scss
@@ -21,7 +21,8 @@
       .dropdown-menu {
         max-height: calc(75vh);
         overflow-y: auto;
-        .navi .navi-item .navi-link .navi-text {
+        .navi .navi-item .navi-link {
+          display: grid;
           text-align: center;
         }
       }
