--- a/views/partials/_header.html
+++ b/views/partials/_header.html
@@ -120,7 +120,7 @@
       <!--end::Tablet & Mobile Search-->
 
       <!--begin::Create-->
-      <div class="topbar-item" id="ol-water-section">
+      <div class="topbar-item" id="ol-section-code-wtl">
 
         <div class="collapse nav justify-content-center" id="topbarToggle">
           <div class="topbar-item" id="viw_wtl_wtsa_as">
@@ -131,8 +131,7 @@
                     data-offset="0,10">
               대블럭
             </button>
-            <div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-sm">
-            </div>
+            <div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-sm"></div>
           </div>
           <div class="topbar-item" id="viw_wtl_wtssa_as">
             <button type="button"
@@ -142,9 +141,7 @@
                     data-offset="0,10">
               중블럭
             </button>
-            <div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-sm">
-
-            </div>
+            <div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-sm"></div>
           </div>
           <div class="topbar-item" id="viw_wtl_wtsba_as">
             <button type="button"
@@ -154,9 +151,7 @@
                     data-offset="0,10">
               소블럭
             </button>
-            <div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-sm">
-
-            </div>
+            <div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-sm"></div>
           </div>
         </div>
 
