--- a/tools/webpack/webgis/metronic/style.scss
+++ b/tools/webpack/webgis/metronic/style.scss
@@ -136,23 +136,6 @@
 
 ////////////////////////////////////////////////////////////////
 
-// Source reference not found
-
-.form-group {
-  margin-bottom: 1rem;
-}
-
-.form-control {
-  height: calc(1.0em + 1rem + 2px);
-  line-height: 1;
-}
-
-.bootstrap-select > .dropdown-toggle {
-  padding: 0.5rem 1rem;
-}
-
-////////////////////////////////////////////////////////////////
-
 // demo5/src/sass/components/_quick-search.scss:18
 
 .input-group-prepend > .input-group-text {
@@ -168,14 +151,19 @@
   position: relative;
   overflow: hidden;
   border-radius: 2px;
+
+  .inner {
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    background: #F3F6F9;
+    opacity: 0.35;
+    top: 25%;
+    border-radius: 2px;
+    //box-shadow: 0px 0px 30px 20px white;
+  }
 }
-.inner {
-  position: absolute;
-  width:100%;
-  height: 50%;
-  background: #F3F6F9;
-  opacity:0.35;
-  top: 25%;
-  border-radius: 2px;
-  //box-shadow: 0px 0px 30px 20px white;
-}
+
+@import
+  "../service/service"
+;
