--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -29,13 +29,14 @@ License: You must have a valid license purchased only from themeforest(the above
   <!--end::Fonts-->
 
   <!--begin::Page Vendors Styles(used by this page)-->
-
+  <link href="assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css" />
   <!--end::Page Vendors Styles-->
 
   <!--begin::Global Theme Styles(used by all pages)-->
   <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css"/>
   <link href="assets/plugins/custom/prismjs/prismjs.bundle.css" rel="stylesheet" type="text/css"/>
   <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css"/>
+
   <link href="assets/css/style.custom.bundle.css" rel="stylesheet" type="text/css"/>
   <link href="assets/css/maps.bundle.css" rel="stylesheet" type="text/css"/>
 
