--- a/views/service-register.html
+++ b/views/service-register.html
@@ -19,7 +19,7 @@
     <!--begin::Wrapper-->
     <div class="d-flex flex-column flex-row-fluid wrapper" id="kt_wrapper">
 
-      <!--[html-partial:include:{"file":"partials/_header.html"}]/-->{{> _header-service}}
+      <!--[html-partial:include:{"file":"partials/_header.html"}]/-->{{> _header-service-register}}
 
       <!--begin::Content-->
       <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
@@ -140,8 +140,7 @@
 
 <!--begin::Page Scripts(used by this page)-->
 <script src="assets/js/pages/widgets.js"></script>
-<script src="assets/js/pages/crud/forms/widgets/bootstrap-datetimepicker.js"></script>
-<script src="assets/js/pages/crud/forms/widgets/input-mask.js"></script>
+<script src="assets/js/serv.maps.js"></script>
 <script src="assets/js/serv.bundle.js"></script>
 <script>
   $('.navi-link').removeClass('active');
