--- a/views/service-search.html
+++ b/views/service-search.html
@@ -19,7 +19,7 @@
     <!--begin::Wrapper-->
     <div class="d-flex flex-column flex-row-fluid wrapper" id="kt_wrapper">
 
-      <!--[html-partial:include:{"file":"partials/_header.html"}]/-->{{> _header}}
+      <!--[html-partial:include:{"file":"partials/_header.html"}]/-->{{> _header-service-search}}
 
       <!--begin::Content-->
       <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
@@ -139,8 +139,7 @@
 
 <!--begin::Page Scripts(used by this page)-->
 <script src="assets/js/pages/widgets.js"></script>
-<script src="assets/js/pages/crud/datatables/search-options/advanced-search.js"></script>
-<!--<script src="assets/js/pages/crud/datatables/extensions/buttons.js"></script>-->
+<script src="assets/js/serv.bundle.js"></script>
 <script>
   $('.navi-link').removeClass('active');
   $('#navi-link-2').addClass('active');
