--- a/demo5/src/sass/components/_variables.demo.scss
+++ b/demo5/src/sass/components/_variables.demo.scss
@@ -9,4 +9,4 @@ $primary-light:    									#E1F0FF;
 $primary-inverse:  									#FFFFFF;
 
 // Border Radiues
-$border-radius:            						    .25rem;
+$border-radius:            						    0.5rem;
