--- a/views/partials/_footer.html
+++ b/views/partials/_footer.html
@@ -1,5 +1,5 @@
 <!--begin::Footer-->
-<div class="footer bg-white d-flex flex-lg-column" id="kt_footer">
+<div class="footer bg-white d-flex flex-lg-column mb-5" id="kt_footer">
 
   <!--begin::Container-->
   <div class="container-fluid d-flex flex-column flex-md-row align-items-center justify-content-between">
